Fix: corrected HTML syntax for ul/li and styled .herramientas list (centered text, no bullets, spacing)

--- a/styles.css
+++ b/styles.css
@@ -57,15 +57,21 @@ h2 {
 h3 {
   color: #000000b2;
   font-size: 1.5rem;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   text-align: center;
 }
 
 
-  ul {
-  margin-left: 40px;
-  padding-left: 40px;
+.herramientas ul {
+  list-style: none;
+  text-align: center;
+    margin-bottom: 10px;
 }
+
+.herramientas ul li {
+    margin-bottom: 10px;
+}
+
 
   
     button {
